ejs weather can now search by zip

--- a/backend-server/views/layouts/navbar.ejs
+++ b/backend-server/views/layouts/navbar.ejs
@@ -10,6 +10,6 @@
       <a href="/ejs-testing/userPlants">User Plants</a>
       <a href="/ejs-testing/gardens">Gardens</a>
       <a href="/ejs-testing/sproutShareUsers">Users</a>
-      <a href="/weather">Weather</a>
+      <a href="/ejs-testing/weather">Weather</a>
    </ul>
 </nav>
