Added 3day forecast route and ejs test pages

--- a/backend-server/views/weather.ejs
+++ b/backend-server/views/weather.ejs
@@ -11,7 +11,13 @@
       <br/>
       <br/>
       <br/>
+      <h2>Current Weather By Zip</h2>
       <form action="/ejs-testing/weather/zipcode" method = "get">
+         <input type="text" name="zipcode"  placeholder = "Set Zipcode..." >
+         <button type="submit">Submit</button>
+      </form>
+      <h2>3 Day forecast by zip</h2>
+      <form action="/ejs-testing/weather/3dayforcast" method = "get">
          <input type="text" name="zipcode"  placeholder = "Set Zipcode..." >
          <button type="submit">Submit</button>
       </form>
@@ -43,5 +49,20 @@
          </div>
       </center>
       <% } %>
-      
+
+      <% if (typeof curr3DayForcast !== 'undefined') { %>  
+      <center>
+         <div class="threeDayForcast">
+            <div>Forcast 1 Date: <%=curr3DayForcast.forcast1Date%></div>
+            <div>Forcast 1: <%=curr3DayForcast.forcast1main%></div>
+            <div>Forcast 1 Icon: <%=curr3DayForcast.forcast1icon%></div>
+            <div>Forcast 2 Date: <%=curr3DayForcast.forcast2Date%></div>
+            <div>Forcast 2: <%=curr3DayForcast.forcast2main%></div>
+            <div>Forcast 2 Icon: <%=curr3DayForcast.forcast2icon%></div>
+            <div>Forcast 3 Date: <%=curr3DayForcast.forcast3Date%></div>
+            <div>Forcast 3: <%=curr3DayForcast.forcast3main%></div>
+            <div>Forcast 4 Icon: <%=curr3DayForcast.forcast3icon%></div>
+            </div>
+         </center>
     </div>
+    <% } %>
