--- a/backend-server/views/layouts/navbar.ejs
+++ b/backend-server/views/layouts/navbar.ejs
@@ -1,6 +1,7 @@
 <nav>
    <ul>
       <a href="/ejs-testing/login">Login</a>
+      <a href="/ejs-testing/register">Register</a>
       <a href="/ejs-testing">Test Home</a>
       <a href="/ejs-testing/communityPosts">Comm. Posts</a>
       <a href="/ejs-testing/exchangeListings">Ex. Listing</a>
