--- a/backend-server/views/login.ejs
+++ b/backend-server/views/login.ejs
@@ -1,22 +1,30 @@
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Login</title>
+		<%-include('layouts/header');-%>
+	</head>
+	<body>
+		<%-include('layouts/navbar');-%>
+		<div class="container">
+			<div class="row">
 
-<%-include('layouts/navbar');-%>
-<div class="container">
-	<div class="row">
-
-		<h1 style="text-align: center;">
-			Log In to SproutShare
-		</h1>
-			<form action="/ejs-testing/login" method="POST">
-				<div class="form-group">
-					<input class="form-control" type="text" name="username" placeholder="username">	
-				</div>
-				<div class="form-group">
-					<input class="form-control" type="password" name="password" placeholder="password">
-				</div>
-				<button class="btn btn-lg btn-default btn-block btn-primary">
-					Log In
-				</button>
-			</form>
-			<a href="/ejs-testing/sproutShareUsers">Go Back</a>
+				<h1 style="text-align: center;">
+					Log In to SproutShare
+				</h1>
+					<form action="/ejs-testing/login" method="POST">
+						<div class="form-group">
+							<input class="form-control" type="text" name="username" placeholder="username">	
+						</div>
+						<div class="form-group">
+							<input class="form-control" type="password" name="password" placeholder="password">
+						</div>
+						<button class="btn btn-lg btn-default btn-block btn-primary">
+							Log In
+						</button>
+					</form>
+					<a href="/ejs-testing/sproutShareUsers">Go Back</a>
+			</div>
 	</div>
-</div>
+	</body>
+</html>
