--- a/backend-server/views/register.ejs
+++ b/backend-server/views/register.ejs
@@ -1,35 +1,46 @@
-
-
-<div class="container">
-	<div class="row">
-		
-		<h1 style="text-align: center;">
-			Sign Up for SproutShare
-		</h1>
-
-		<form action="/ejs-testing/register" method="post" enctype="application/x-www-form-urlencoded">
-            <label for="username">Username</label>
-            <input type="text" name="username">
-   
-            <label for="first_name">First Name</label>
-            <input type="text" name="first_name">
-   
-            <label for="last_name">Last Name</label>
-            <input type="text" name="last_name">
-   
-            <label for="email_address">Email Address</label>
-            <input type="text" name="email_address">
-   
-            <label for="password">Password</label>
-            <input type="password" name="password">
-   
-            <label for="lang">Language</label>
-            <input type="text" name="lang">
-   
-            <label for="zip_code">Zip Code</label>
-            <input type="text" name="zip_code">
-   
-            <button type="submit">Submit</button>
-         </form>
-	</div>
-</div>
+<!DOCTYPE html>
+<html>
+<head>
+      <title>Register</title>
+      <%-include('layouts/header');-%>
+</head>
+<body>
+      <%-include('layouts/navbar');-%>
+      <div class="container">
+            <div class="row">
+                  <h1 style="text-align: center;">
+                        Sign Up for SproutShare
+                  </h1>
+                  <form action="/ejs-testing/register" method="post" enctype="application/x-www-form-urlencoded">
+                  <label for="username">Username</label>
+                  <input type="text" name="username">
+            
+                  <label for="first_name">First Name</label>
+                  <input type="text" name="first_name">
+            
+                  <label for="last_name">Last Name</label>
+                  <input type="text" name="last_name">
+            
+                  <label for="email_address">Email Address</label>
+                  <input type="text" name="email_address">
+            
+                  <label for="password">Password</label>
+                  <input type="password" name="password">
+            
+                  <label for="lang">Language</label>
+                  <input type="text" name="lang">
+            
+                  <label for="zip_code">Zip Code</label>
+                  <input type="text" name="zip_code">
+            
+                  <button type="submit">Submit</button>
+                  </form>
+            </div>
+      </div>
+      <div class="display-message">
+            <% if (typeof newUser !== 'undefined') { %>
+             <div>User <%=newUser.username%> Created</div> 
+            <% } %>
+      </div>
+</body>
+</html>
