implemented refresh tokens for logout process in ejs

--- a/backend-server/views/sproutShareUsers.ejs
+++ b/backend-server/views/sproutShareUsers.ejs
@@ -62,6 +62,7 @@
                <div>Language: <%=user.lang%></div>
                <div>Zip Code: <%=user.zip_code%></div>
                <div>Access Token: <%=user.accesstoken%></div>
+               <div>Refresh Token: <%=user.refreshtoken%></div>
                <%= "}" %> 
                <br/>
                <button class = "edit-record" value="<%=user.user_key%>">Edit</button>
