--- a/backend-server/views/layouts/navbar.ejs
+++ b/backend-server/views/layouts/navbar.ejs
@@ -5,12 +5,12 @@
       <a href="/ejs-testing/logout" style="display:none" class="logoutLink">Logout</a>
       <a href="/ejs-testing/register" style="display:inline" class="registerLink">Register</a>
       <a href="/ejs-testing">Test Home</a>
-      <a href="/ejs-testing/communityPosts">Comm. Posts</a>
+      <a href="/ejs-testing/communityPosts" >Comm. Posts</a>
       <a href="/ejs-testing/exchangeListings">Ex. Listing</a>
       <a href="/ejs-testing/notifications">Notifications</a>
       <a href="/ejs-testing/forumPosts">Forum Posts</a>
       <a href="/ejs-testing/plants">Plants</a>
-      <a href="/ejs-testing/userPlants">User Plants</a>
+      <a href="/ejs-testing/userPlants" class="restrictedLink">User Plants</a>
       <a href="/ejs-testing/gardens">Gardens</a>
       <a href="/ejs-testing/sproutShareUsers">Users</a>
       <a href="/ejs-testing/weather">Weather</a>
@@ -20,20 +20,35 @@
 
 <script>
    console.log(localStorage);
+   //const ejsPageUrl = 'http://localhost:3000/ejs-testing';
    const usernameDisplay = document.querySelector('.username-placeholder');
    const username = localStorage.getItem('username');
    const loginLink = document.querySelector('.loginLink');
    const logoutLink = document.querySelector('.logoutLink');
    const registerLink = document.querySelector('.registerLink');
-   
+   const restrictedLink = document.querySelector('.restrictedLink');
+
    logoutLink.addEventListener('click', async function(event){
       event.preventDefault();
       await logoutHandler();
+
       logoutHandler().then(()=>{
-      window.location.href = 'http://localhost:3000/ejs-testing/login/';
-      localStorage.clear();
-   })
+         window.location.href = 'http://localhost:3000/ejs-testing/login/';
+         localStorage.clear();
+      })
    });
+
+   restrictedLink.addEventListener('click', async function(event){
+      event.preventDefault();
+      await authorizeUser();
+      authorizeUser()
+      .then(res => res.text())
+      .then(htmlStr => {
+         document.open();
+         document.write(htmlStr);
+         document.close();
+      })
+   })
 
    async function logoutHandler(){
       const response = await fetch('http://localhost:3000/ejs-testing/logout/', {
@@ -45,6 +60,18 @@
 			})
    }
    
+   async function authorizeUser(){
+      const fullLink = restrictedLink + '/'
+      console.log(fullLink);
+      const response = await fetch(fullLink, {
+         method:'GET',
+         headers:{
+            'Authorization': `Bearer ${localStorage.getItem('refreshToken')}`
+         }
+      });
+      return response;
+   }
+
    if(localStorage.getItem('refreshToken') !== null && username !== null){
       // user is already logged in, so remove the login button and register button
       loginLink.style.display = 'none';
