--- a/backend-server/views/weather.ejs
+++ b/backend-server/views/weather.ejs
@@ -21,6 +21,11 @@
          <input type="text" name="zipcode"  placeholder = "Set Zipcode..." >
          <button type="submit">Submit</button>
       </form>
+      <h2>24hr Rainfall by Zip</h2>
+      <form action="/ejs-testing/weather/getRain" method = "get">
+         <input type="text" name="zipcode"  placeholder = "Set Zipcode..." >
+         <button type="submit">Submit</button>
+      </form>
       <% if (typeof weather !== 'undefined') { %>
          <div class="table">
             <center>
@@ -72,3 +77,12 @@
          </center>
     </div>
     <% } %>
+
+    <% if(typeof rainfallData !== 'undefined') { %>
+      <center>
+      <div class ="24hr-rainfall-total">
+         <div>Rainfall Total: <%= rainfallData %> Inches </div>
+      </div>
+   </center>
+    <% } %>
+   </body>
