--- a/backend-server/views/login.ejs
+++ b/backend-server/views/login.ejs
@@ -15,6 +15,8 @@
 		</form>
 	</div>	
 
+	<button><u>Forgot Password</u></button>
+
 	<script>
 
 		const submitButton = document.getElementById('submit-button');
